fix mobile flickering
- fix mobile flickering issue on iPhone 5/6

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -3615,6 +3615,17 @@ footer #backtotop:before {
 	}
 }
 
+/* Portrait iPhone 5*/
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+    #hero.hero-full{
+      min-height: 620px!important;
+    }
+}
+
 /* Landscape iPhone 5*/
 @media only screen 
   and (min-device-width: 320px) 
@@ -3634,6 +3645,7 @@ footer #backtotop:before {
   and (orientation: portrait) { 
     #hero.hero-full{
       padding-top: 0vh;
+      min-height: 700px!important;
     }
 }
 
